Fixed static classNameList Issue , Used Class In Wild Card Import Are Now Visible And Implemented In FrontEnd

--- a/MetricApp/bin/ressource/Css Folder/Import.css
+++ b/MetricApp/bin/ressource/Css Folder/Import.css
@@ -11,6 +11,25 @@
 	
 }
 
+.class-node-svg{
+	-fx-fill:#0B75B2;
+}
+
+.none-node-svg{
+	-fx-fill:#FF200D;
+}
+
+
+
+.wild-node-label{
+	-fx-font-size:28px;
+}
+
+.wild-node-svg{
+	-fx-scale-x:1.2;
+ 	-fx-scale-y:1.2;
+ 	-fx-fill:#CB9327;
+}
 
 .parent-node-label{
 	-fx-font-size:35px;
